--- a/app/views/services/edit.html.erb
+++ b/app/views/services/edit.html.erb
@@ -7,7 +7,11 @@
 
 <%= f.label :description %>
 <%= f.text_area :description %>
-
 <%= f.submit %>
 
-<% end %>
+<div>
+  <%= form_for [@profile, @service], method: :delete, :html => {:class => "delete-service"} do |f| %>
+  <%= f.submit "Destroy" %>
+  <% end %>
+    <% end %>
+</div>
