--- a/app/views/services/show.html.erb
+++ b/app/views/services/show.html.erb
@@ -3,6 +3,7 @@
 
 <p> <%= @service.description %> </p>
 
-<p>
-  <%= @service.price %>
-</p>
+<h2>
+  Cost: <%= @service.price %>:00
+</h2>
+<a href="/">Purchase!</a>
