--- a/app/views/profiles/edit.html.erb
+++ b/app/views/profiles/edit.html.erb
@@ -1,14 +1,14 @@
 <h1>Edit</h1>
 
 <%= form_for @profile do |f| %>
-<%= f.label :name %>
-<%= f.text_field :name %>
+<!-- <%= f.label :name %> -->
+<%= f.text_field :name, :placeholder => "name" %>
 
-<%= f.label :about_me %>
-<%= f.text_field :about_me %>
+<!-- <%= f.label :pic_url %> -->
+<%= f.text_field :pic_url, :placeholder => "photo url" %>
 
-<%= f.label :pic_url %>
-<%= f.text_field :pic_url %>
+<!-- <%= f.label :about_me %> -->
+<%= f.text_area :about_me, :placeholder => "about me" %>
 
 <%= f.submit %>
 
