transaction feature added

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -56,6 +56,10 @@ background-color: #01ADDB;
   padding-top: 45px;
   padding-left: 70px;
   padding-right: 70px;
+  /*background: -webkit-linear-gradient(white, #01ADDB);
+  background: -o-linear-gradient(white, #01ADDB);
+  background: -moz-linear-gradient(white, #01ADDB);
+  background: linear-gradient(white, #01ADDB); */
 }
 
 h1{
@@ -75,8 +79,11 @@ a {
 .timebank {
   font-size: 50px;
   color: white;
-  border: solid 1px #01ADDB;
-  background-color: #01ADDB;
+  border: 1px #01ADDB;
+ackgrou, nd: -webkit-linear-gradient(#01ADDB, white);
+  background: -o-linear-gradient(#01ADDB, white);
+  background: -moz-linear-gradient(#01ADDB, white);
+  background: linear-gradient(#01ADDB, white);
 }
 
 .profile{
@@ -115,3 +122,7 @@ a {
     color: white;
     height: 35px;
     display: block;
+
+li{
+  list-style-type:none
+}
