--- a/app/views/services/show.html.erb
+++ b/app/views/services/show.html.erb
@@ -6,4 +6,7 @@
 <h2>
   Cost: <%= @service.price %>:00
 </h2>
-<a href="/">Purchase!</a>
+<%= form_for Transaction.new, :html => {:class => "transaction"} do |f| %>
+  <%= f.hidden_field :service_id, value: @service.id %>
+  <%= f.submit "Purchase" %>
+<% end %>
