styling and logo added

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -2,8 +2,9 @@
   box-sizing: inherit;
   margin: 0;
   padding: 0;
-  font-family: "HelveticaNeue-Light", sans-serif;
-  font-size: 18px;
+  font-family: 'Montserrat', sans-serif;
+  font-size: 28px;
+  color: #484d56;
 }
 body {
   font-family: "HelveticaNeue-Light";
@@ -17,18 +18,18 @@ body {
 
 nav {
 text-align: center;
-height: 100px;
+height: 150px;
 border-bottom: 1px solid #EEEDF2;
 border-top: 1px solid gray;
 padding-bottom: 10px;
 padding-top: 10px;
-background-color: #01ADDB;
+background-color: white;
 }
 
 .nav-link {
   text-decoration: none;
-  color: white;
-  padding: 5%;
+  color: #484d56;
+  margin: 5%;
   font-size: 30px;
   display: inline-block;
   font-family: 'Open Sans Condensed', sans-serif;
@@ -38,7 +39,8 @@ background-color: #01ADDB;
 }
 
 .nav-link:hover{
-  text-shadow: 0 0 20px grey;
+  /*text-shadow: 0 0 50px #ED423D;*/
+  border-bottom: 5px solid #ED423D
 }
 @media (min-width: 500px) {
     .site-content {
@@ -53,14 +55,11 @@ background-color: #01ADDB;
 }
 .content {
   margin: 0 auto;
+  width: 50%;
   margin-top: 10px;
   padding-top: 45px;
   padding-left: 70px;
   padding-right: 70px;
-  /*background: -webkit-linear-gradient(white, #01ADDB);
-  background: -o-linear-gradient(white, #01ADDB);
-  background: -moz-linear-gradient(white, #01ADDB);
-  background: linear-gradient(white, #01ADDB); */
 }
 
 h1{
@@ -73,11 +72,12 @@ p {
 
 a {
   text-decoration: none;
-  color: red;
+  color: #ED423D;
 }
 
 .notice {
-  color: red;
+  background-color: #ED423D;
+  color: white;
   font-size: 35px;
   font-weight: lighter;
 }
@@ -86,19 +86,16 @@ a {
   font-size: 50px;
   color: white;
   border: 1px #01ADDB;
-ackgrou, nd: -webkit-linear-gradient(#01ADDB, white);
-  background: -o-linear-gradient(#01ADDB, white);
-  background: -moz-linear-gradient(#01ADDB, white);
-  background: linear-gradient(#01ADDB, white);
+  background-color: #ED423D
 }
 
-.profile{
+.profile {
   height: 400px;
   width: 300px;
 }
 .circular {
   display:block;
-  margin:auto;
+  margin:2em auto;
   width: 100%;
 	width: 300px;
 	height: 300px;
@@ -119,11 +116,13 @@ ackgrou, nd: -webkit-linear-gradient(#01ADDB, white);
   }
   input {
     width: 500px;
-    height: 25px;
+    height: 50px;
     margin-bottom: 5px;
     display: block;
     margin: 0 auto;
     width: 50%;
+    border: none;
+    border-bottom: 2px solid #484d56;
   }
   textarea {
     margin: 0px;
@@ -132,16 +131,35 @@ ackgrou, nd: -webkit-linear-gradient(#01ADDB, white);
     display: block;
     margin: 0 auto;
     width: 50%;
+    border: none;
+    border-bottom: 2px solid #484d56;
+    resize: none;
   }
+  textarea:focus{
+    outline: none;
+  }
+
   input[type=submit]{
-    background-color: #01ADDB;
+    background-color: #ED423D;
     background-position: center;
     color: white;
-    height: 35px;
+    height: 50px;
     display: block;
-    margin: 0 auto;
+    margin: 10px auto;
     width: 50%;
+    border:none;
 }
+  input:focus{
+    outline: none;
+
+  }
 li {
-  list-style-type:none
+  list-style-type:none;
+  padding-top: 5px;
+}
+.logo{
+  width: 150px;
+  position: fixed;
+  display: flex;
+  padding-left: 10px;
 }
