--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -30,7 +30,7 @@ background-color: white;
   text-decoration: none;
   color: #484d56;
   margin: 5%;
-  font-size: 30px;
+  font-size: 35px;
   display: inline-block;
   font-family: 'Open Sans Condensed', sans-serif;
 }
@@ -61,13 +61,20 @@ background-color: white;
   padding-left: 70px;
   padding-right: 70px;
 }
-
-h1{
+h2 {
   font-size: 40px;
+  padding-top: 10px;
+  padding-bottom: 10px;
+}
+h1{
+  font-size: 60px;
+  padding-top: 10px;
+  padding-bottom: 10px;
 }
 p {
   color: gray;
   padding: 15px;
+  font-weight: lighter;
 }
 
 a {
@@ -92,7 +99,15 @@ a {
 .profile {
   height: 400px;
   width: 300px;
+  margin: 7px;
 }
+
+.profile-name {
+  background-color: #ED423D;
+  color: white;
+  font-size: 35px;
+}
+
 .circular {
   display:block;
   margin:2em auto;
@@ -155,7 +170,7 @@ a {
   }
 li {
   list-style-type:none;
-  padding-top: 5px;
+  padding: 15px;
 }
 .logo{
   width: 150px;
