--- a/app/views/profiles/index.html.erb
+++ b/app/views/profiles/index.html.erb
@@ -1,6 +1,6 @@
 <% @profiles.each do |profile| %>
   <div>
-    <h3><%= link_to profile.name, profile %></h3>
+    <h3><%= link_to profile.name, profile, :class => "profile-name" %></h3>
     <img class="profile" src="<%=profile.pic_url%>">
   </div>
 <% end %>
