--- a/app/views/services/edit.html.erb
+++ b/app/views/services/edit.html.erb
@@ -1,12 +1,12 @@
 <%= form_for ([@profile, @service]) do |f| %>
 <!-- <%= f.label :name %> -->
-<%= f.text_field :name %>
+<%= f.text_field :name, :placeholder => "name" %>
 
 <!-- <%= f.label :price %> -->
-<%= f.text_field :price %>
+<%= f.text_field :price, :placeholder => "price" %>
 
 <!-- <%= f.label :description %> -->
-<%= f.text_area :description %>
+<%= f.text_area :description, :placeholder => "description" %>
 <%= f.submit %>
 <% end %>
 
