--- a/app/views/services/new.html.erb
+++ b/app/views/services/new.html.erb
@@ -8,6 +8,6 @@
 <!-- <%= f.label :description %> -->
 <%= f.text_area :description, :placeholder => "description" %>
 
-<%= f.submit %>
+<%= f.submit "Create" %>
 
 <% end %>
