--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -49,7 +49,7 @@ background-color: white;
     .site-content {
       width: 80%;
     }
-
+}
 @media (min-width: 1000px) {
     .site-content {
       width: 40%;
