--- a/app/views/profiles/welcome.html.erb
+++ b/app/views/profiles/welcome.html.erb
@@ -1,4 +1,4 @@
-<div class= "intro"> <h1>Welcome to Timefly</h1> </div>
+<div class= "intro"> <h1 class="w">Welcome to Timefly</h1> </div>
 <p>
 Timefly is a digital timebank and community, where users can come to exchange services.
 Timefly uses hours as its currency. Users are credited hours when they perform services,
